--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -2,7 +2,7 @@
 
 name: CI test
 
-# Controls when the action will run. 
+# Controls when the action will run.
 on:
   # Triggers the workflow on push or pull request events but only for the main branch
   push:
@@ -18,7 +18,7 @@ jobs:
   # This workflow contains a single job called "build"
   build:
     # The type of runner that the job will run on
-    runs-on: golang:latest
+    runs-on: golang
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
@@ -30,5 +30,3 @@ jobs:
         run: |
           ls
           echo Hello, world!
-
-      
