--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,32 +1,37 @@
-# This is a basic workflow to help you get started with Actions
+name: Go
 
-name: CI test
-
-# Controls when the action will run.
 on:
-  # Triggers the workflow on push or pull request events but only for the main branch
   push:
     branches: [ main ]
   pull_request:
     branches: [ main ]
 
-  # Allows you to run this workflow manually from the Actions tab
-  workflow_dispatch:
-
-# A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  # This workflow contains a single job called "build"
+
   build:
-    # The type of runner that the job will run on
-    runs-on: golang
-
-    # Steps represent a sequence of tasks that will be executed as part of the job
+    name: Build
+    runs-on: ubuntu-latest
     steps:
-      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-      - uses: actions/checkout@v2
 
-    # Runs a single command using the runners shell
-      - name: Run a one-line script
-        run: |
-          ls
-          echo Hello, world!
+    - name: Set up Go 1.x
+      uses: actions/setup-go@v2
+      with:
+        go-version: ^1.13
+
+    - name: Check out code into the Go module directory
+      uses: actions/checkout@v2
+
+    - name: Get dependencies
+      run: |
+        go get -v -t -d ./...
+        if [ -f Gopkg.toml ]; then
+            curl https://raw.githubusercontent.com/golang/dep/master/install.sh | sh
+            dep ensure
+        fi
+
+    - name: Build
+      run: 	cd cmd/geekshubs-library && GOOS=linux GOARCH=amd64 go build -o ../bin/main-linux-amd64 main.go
+
+
+    - name: Test
+      run: cd pkg && CGO_ENABLED=${CGO_ENABLED} go test ./... -json -cover
