--- a/.github/workflows/deploy-ssh.yml
+++ b/.github/workflows/deploy-ssh.yml
@@ -10,7 +10,7 @@ jobs:
       - name: pull
         uses: garygrossgarten/github-action-ssh@release
         with:
-          command: cd /geekshubs-library && git pull origin main
+          command: cd /home/ubuntu/geekshubs-library && git pull origin main
           host: ${{ secrets.HOST }}
           username: ubuntu
           # passphrase: ${{ secrets.PASSPHRASE }}
@@ -18,7 +18,7 @@ jobs:
       - name:  docker-compose up
         uses: garygrossgarten/github-action-ssh@release
         with:
-          command: cd /geekshubs-library && docker-compose up
+          command: cd /home/ubuntu/geekshubs-library && docker-compose up
           host: ${{ secrets.HOST }}
           username: ubuntu
           # passphrase: ${{ secrets.PASSPHRASE }}
